--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: Markdown2
 pygments: true
 permalink: /:categories/:title
 source: ./source
-destination: ./site
-url: http://markdown2.github.io/site
+destination: ../site
+url: http://markdown2.org
