--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Markdown2/site.git"
+    "url": "https://github.com/Markdown2/Documentation.git"
   },
   "keywords": [
     "markdown"
