--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,3 +53,4 @@ pages:
     - 'О Документации': 'index.md'
 - Documentation: 
     - 'Typography': 'typography.md'
+    - 'Parser config': 'configuration.md'
